# footsteps

./: .gitignore  .gitmodules  API.md  CMakeLists.txt  Cargo.toml  README.md  README_RUST.md  RUN_DEV_README.md  convert_coreml.py  get_direction.rs  main.cpp  pt_convert_coreml.py  run_dev.py  setup.sh  tf_convert_coreml.py  yolo.py
.cargo/: config.toml
.github/workflows/: ci.yml  rust.yml
include/: PoseDetector.hpp  visualization.hpp
models/alphapose.mlpackage/: Manifest.json
models/alphapose.mlpackage/Data/com.apple.CoreML/: FeatureDescriptions.json  Metadata.json  model.mlmodel
models/movenet_multipose.mlpackage/: Manifest.json
models/movenet_multipose.mlpackage/Data/com.apple.CoreML/: model.mlmodel
models/movenet_singlepose_lightning.mlpackage/: Manifest.json
models/movenet_singlepose_lightning.mlpackage/Data/com.apple.CoreML/: model.mlmodel
models/movenet_singlepose_thunder.mlpackage/: Manifest.json
models/movenet_singlepose_thunder.mlpackage/Data/com.apple.CoreML/: model.mlmodel
models/rtmpose.mlpackage/: Manifest.json
models/rtmpose.mlpackage/Data/com.apple.CoreML/: model.mlmodel
models/yolo11n.mlpackage/: Manifest.json
models/yolo11n.mlpackage/Data/com.apple.CoreML/: model.mlmodel
rtmpose_docker/: Dockerfile  rtmpose_coreml_convert.py
src/: PoseDetector.cpp  PoseDetector.h  access.rs  footstep_tracker.rs  main.cpp  main.rs  osc.rs  person_detector.rs  pose_detector.rs  udp.rs  visualization.rs
