[package]
name = "footstep-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
opencv = { version = "0.95", default-features = false, features = ["videoio", "imgcodecs", "imgproc", "highgui"] }
coreml-rs = { path = "./coreml-rs" }
ndarray = "0.16"
anyhow = "1.0"
half = "2.3"
rayon = "1.11.0"
tracing = { version = "0.1.43", default-features = false, features = ["std"], optional = true }
tracing-subscriber = { version = "0.3.22", default-features = false, optional = true, features = ["fmt", "env-filter", "std", "ansi"] }
indicatif = { version = "0.18.3", optional = true }
clap = { version = "4.5.53", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"


[features]
debug = ["tracing", "tracing-subscriber", "indicatif"]
