[package]
name = "footstep-tracker"
version = "0.1.0"
edition = "2021"
description = "Real-time multi-person footstep detection on macOS using CoreML"
readme = "README.md"
repository = "https://github.com/manorajesh/footsteps"
license = "MIT"
keywords = ["real-time", "pose-estimation", "coreml", "body-tracking"]
categories = ["utilities", "computer-vision", "machine-learning"]
exclude = [".vscode", "images", ".github", "AlphaPose", "coreml-rs/tests", "rtmpose_docker", "*.py", "venv"]


[dependencies]
opencv = { version = "0.95", default-features = false, features = ["videoio", "imgcodecs", "imgproc", "highgui"] }
coreml-rs = { path = "./coreml-rs" }
ndarray = "0.16"
anyhow = "1.0"
half = "2.3"
rayon = "1.11.0"
tracing = { version = "0.1.43", default-features = false, features = ["std"], optional = true }
tracing-subscriber = { version = "0.3.22", default-features = false, optional = true, features = ["fmt", "env-filter", "std", "ansi"] }
indicatif = { version = "0.18.3", optional = true }
clap = { version = "4.5.53", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
debug = false


[features]
debug = ["tracing", "tracing-subscriber", "indicatif"]
